fix covering whole screen

--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,17 @@
 html,
 body {
   margin: 0;
-  display: inline;
-  background: #305973;
 }
 
-#aa_particles {
-  z-index: 1;
+#particles {
+  position: fixed;
+  z-index: 0;
   height: 100%;
   height: 100%;
-  background: #674172;
+  background: #305973;
+  right: 0;
+  left: 0;
+  margin: 0;
 }
 
 .aa_sec {
